k3s/apps/fresh-rss/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fresh-rss-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: rss.mrvym.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fresh-rss-service
            port:
              number: 80
